test/domains/unsafeAssign/TestUnsafeAssignChecksFail.good
{x = 0}
TestUnsafeAssignChecksFail.chpl:14: error: halt reached - Upon finishing unsafe assignment, one or more elements of a non-default-initializable array of type 'shared C' remain uninitialized
